# openwrt-youku

./: rules.mk
config/: bruvin-config.in
package/utils/IOT-CoAP/: CMakeLists.txt  Makefile
package/utils/IOT-CoAP/files/: COAP.init
package/utils/IOT-CoAP/include/client/: CCoAPExport.h  CCoAPMessage.h  CCoAPNetwork.h  CoAPClient.h
package/utils/IOT-CoAP/include/common/: CoAPCommon.h  CoAPDeserialize.h  CoAPPlatform.h  CoAPSerialize.h  HAL_DEBUG.h  HAL_Linux.h  HAL_UDP_Linux.h  lite-list.h  log.h  string_utils.h  utils_md5.h
package/utils/IOT-CoAP/include/server/: CoAPExport.h  CoAPInternal.h  CoAPMessage.h  CoAPNetwork.h  CoAPObserve.h  CoAPResource.h  CoAPServer.h
package/utils/IOT-CoAP/src/: main.c
package/utils/IOT-CoAP/src/client/: CoAPClient.c  CoAPExport.c  CoAPMessage.c  CoAPNetwork.c
package/utils/IOT-CoAP/src/common/: CoAPDeserialize.c  CoAPPlatform.c  CoAPSerialize.c  HAL_Linux.c  HAL_UDP_Linux.c  log.c  string_utils.c  utils_md5.c
package/utils/IOT-CoAP/src/server/: CoAPExport.c  CoAPMessage.c  CoAPNetwork.c  CoAPObserve.c  CoAPResource.c  CoAPServer.c
package/utils/MQTT-Client/: CMakeLists.txt  Makefile
package/utils/MQTT-Client/files/: mqtt.init
package/utils/MQTT-Client/include/: AES.h  Common.h  DaemonLog.h  DeviceList.h  HttpsRequest.h  IotFifo.h  Login.h  PubSub.h  RSA.h  UbusTransform.h  VersionInfo.h  cJSON.h  device-sql.h  device_order.h
package/utils/MQTT-Client/src/: AES.c  DeviceList.c  HttpsRequest.c  IotFifo.c  Login.c  PubSub.c  RSA.c  UbusTransform.c  device-sql.c  device_order.c  main.c
